Fix updating trayicon
fix https://github.com/Icalingua/Icalingua/issues/390

--- a/io.github.Icalingua.Icalingua.yml
+++ b/io.github.Icalingua.Icalingua.yml
@@ -20,6 +20,7 @@ finish-args:
   - --filesystem=xdg-download
   - --filesystem=xdg-config/fontconfig:ro
   - --talk-name=org.freedesktop.Notifications
+  - --talk-name=org.kde.StatusNotifierWatcher
   - --talk-name=com.canonical.AppMenu.Registrar
 
 modules:
