--- a/io.github.Icalingua.Icalingua.yml
+++ b/io.github.Icalingua.Icalingua.yml
@@ -77,19 +77,16 @@ modules:
         dest-filename: zypak-wrapper-mod.sh
         commands:
           - #!/usr/bin/bash
-          - 
-          - self_dir="$(dirname $(realpath $0))"
-          - if [[ -d "$self_dir/build" ]]; then
-          -   export ZYPAK_BIN="$self_dir/build"
-          -   export ZYPAK_LIB="$self_dir/build"
-          - else
-          -   export ZYPAK_BIN="$self_dir"
-          -   export ZYPAK_LIB="$self_dir/../lib"
-          - fi
-          - 
-          - # http://crbug.com/376567
-          - exec > >(exec cat)
-          - exec 2> >(exec cat >&2)
-          - 
-          - exec "$ZYPAK_BIN/zypak-helper" host - "$@"
+          - 'self_dir="$(dirname $(realpath $0))"'
+          - 'if [[ -d "$self_dir/build" ]]; then'
+          - '  export ZYPAK_BIN="$self_dir/build"'
+          - '  export ZYPAK_LIB="$self_dir/build"'
+          - 'else'
+          - '  export ZYPAK_BIN="$self_dir"'
+          - '  export ZYPAK_LIB="$self_dir/../lib"'
+          - 'fi'
+          - '# http://crbug.com/376567'
+          - 'exec > >(exec cat)'
+          - 'exec 2> >(exec cat >&2)'
+          - 'exec "$ZYPAK_BIN/zypak-helper" host - "$@"'
           
