--- a/io.github.Icalingua.Icalingua.yml
+++ b/io.github.Icalingua.Icalingua.yml
@@ -88,5 +88,5 @@ modules:
           - '# http://crbug.com/376567'
           - 'exec > >(exec cat)'
           - 'exec 2> >(exec cat >&2)'
-          - 'exec "$ZYPAK_BIN/zypak-helper" host - "$@"'
+          - 'exec "$ZYPAK_BIN/zypak-helper" host "$@"'
           
