--- a/io.github.Icalingua.Icalingua.yml
+++ b/io.github.Icalingua.Icalingua.yml
@@ -29,8 +29,7 @@ modules:
     build-options:
       no-debuginfo: true
     build-commands:
-      - ar x icalingua.deb
-      - tar xf data.*
+      - bsdtar --to-stdout -xf icalingua.deb data.* | bsdtar -xf -
       - cp -a opt/Icalingua++ $FLATPAK_DEST/
       - cp -a usr/share $FLATPAK_DEST/
       - desktop-file-edit --set-key="Exec" --set-value="icalingua %U" $FLATPAK_DEST/share/applications/*.desktop
