--- a/io.github.Icalingua.Icalingua.yml
+++ b/io.github.Icalingua.Icalingua.yml
@@ -1,9 +1,9 @@
 app-id: io.github.Icalingua.Icalingua
 runtime: org.freedesktop.Platform
-runtime-version: '21.08'
+runtime-version: '23.08'
 sdk: org.freedesktop.Sdk
 base: org.electronjs.Electron2.BaseApp
-base-version: '21.08'
+base-version: '23.08'
 separate-locales: false
 rename-icon: icalingua
 rename-desktop-file: icalingua.desktop
@@ -29,8 +29,7 @@ modules:
     build-options:
       no-debuginfo: true
     build-commands:
-      - ar x icalingua.deb
-      - tar xf data.*
+      - bsdtar --to-stdout -xf icalingua.deb data.* | bsdtar -xf -
       - cp -a opt/Icalingua++ $FLATPAK_DEST/
       - cp -a usr/share $FLATPAK_DEST/
       - desktop-file-edit --set-key="Exec" --set-value="icalingua %U" $FLATPAK_DEST/share/applications/*.desktop
